--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,11 @@ html.dark body {
   background-color: #030712;
 }
 
+.codeslice {
+  @apply p-4 rounded-lg bg-[#22272e];
+}
+
 pre.shiki {
-  @apply text-[15px] p-6 rounded-lg overflow-x-scroll;
+  @apply p-2 text-[15px] overflow-x-scroll scrollbar-thin
+    scrollbar-thumb-gray-600 scrollbar-track-gray-200;
 }
