--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,4 +14,15 @@ html.dark body {
 
 pre.shiki {
   @apply pb-2 text-[15px] overflow-x-scroll scrollbar scrollbar-h-2 scrollbar-thumb-rounded scrollbar-thumb-gray-600 scrollbar-track-transparent;
+  counter-reset: line;
+}
+
+pre.shiki .line {
+  counter-increment: line;
+}
+
+pre.shiki .line:before {
+  @apply select-none inline-block pr-4 text-gray-600 text-[15px] text-right;
+  width: 2rem;
+  content: counter(line);
 }
