--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,14 @@ html.dark body {
   background-color: #030712;
 }
 
+.prose span.pre {
+  @apply py-1 px-1.5 font-mono font-medium rounded bg-gray-100;
+}
+
+.prose :not(h1,h2,h3,h4,h5,h6) span.pre {
+  @apply text-sm;
+}
+
 pre.shiki {
   @apply pb-2 text-[15px] overflow-x-scroll scrollbar scrollbar-h-2 scrollbar-thumb-rounded scrollbar-thumb-gray-600 scrollbar-track-transparent;
   counter-reset: line;
